--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,6 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+# Conan.io
+conanbuildinfo.pri
